--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,7 +1,8 @@
 .sidebar {
   width: 250px;
   padding: 20px;
-  background-color: #f4f4f4;
+  background-color: #303641; 
+  color: #f0f0f0bd; 
   position: fixed;
   height: 100%;
   overflow: auto;
