--- a/src/components/SmartScrollSidebar.css
+++ b/src/components/SmartScrollSidebar.css
@@ -1,14 +1,15 @@
 .smart-scroll-sidebar {
   width: 250px;
   padding: 20px;
-  background-color: #f4f4f4;
+  background-color: #303641; 
+  color: #f0f0f0bd; 
   position: fixed;
   height: 100%;
   overflow: auto;
   right: 0;
   top: 0;
   box-sizing: border-box;
-  border-left: 1px solid #ccc; /* Add left border */
+
 }
 
 .smart-scroll-sidebar ul {
