--- a/src/components/SmartScrollSidebar.css
+++ b/src/components/SmartScrollSidebar.css
@@ -1,6 +1,8 @@
 .smart-scroll-sidebar {
-  width: 250px;
-  padding: 20px;
+  width: 25vw;
+  padding-right: 9vw;
+  padding-left: 1vw;
+  padding-top: 5vh;
   background-color: #303641; 
   color: #f0f0f0bd; 
   position: fixed;
